solc_ossfuzz_seed_corpus/test_sol/test_b5ae6b9a1a63b479a913febfd66c63b487c3bbbedf9f3104bf6def6244a83e80_51006f4c98c20f6a4439a96d9acf700437dc549a_sol.sol
==== Source:  ====

==== Source: su0.sol ====
library L0 {
  function f0() external    returns(int8 o0)
  {
  }
  function f1() external    returns(bytes[] memory o0,address payable o1)
  {
  }
  function f2(bool i0,uint120 i1) external    returns(uint240 o0,uint232 o1)
  {
    bool l0 = (!(true));
    assert(true);
  }
  function f3(uint216 i0) public   
  {
  }
  using L0 for *;
  function f4(bytes5 i0) internal   
  {
  }
}
struct St0 {
  address payable[] el0;
  bytes31 el1;
  bytes2 el2;
}
using L0 for uint;
using L0 for uint;
using L0 for uint;
struct St1 {
  function (uint72[] memory, address payable) external   returns (int80, function (int256) external   returns (address), function (int232, address) internal   returns (int40, string memory)) el0;
}
pragma solidity >= 0.0.0;
// ----
// TypeError 2582: (su0.sol:645-714): Internal type cannot be used for external function type.
